--- a/package.json
+++ b/package.json
@@ -1,13 +1,23 @@
 {
   "name": "@idrisay/profanity-check",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Check profanity words for supported languages.",
   "type": "module",
-  "main": "index.ts",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "example": "tsx example.ts"
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "exports": {
+    "import": "./dist/index.js",
+    "require": "./dist/index.cjs"
   },
+  "scripts": {
+    "build": "tsc",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "example": "tsx example.ts",
+    "prepublishOnly": "npm run build"
+  },
+  "files": [
+    "dist"
+  ],
   "keywords": [
     "profanity",
     "badwords",
